--- a/index.html
+++ b/index.html
@@ -2,78 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LogiTrace Super-Power Console</title>
+    <title>LogiTrace AI Pipeline</title>
     <style>
-        :root { --accent: #10b981; --bg: #020617; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg); color: #f8fafc; padding: 40px; }
-        .dashboard { display: grid; grid-template-columns: 1fr 350px; gap: 20px; max-width: 1200px; margin: 0 auto; }
-        .card { background: #1e293b; padding: 25px; border-radius: 12px; border: 1px solid #334155; }
-        .stat-grid { display: flex; gap: 20px; margin-bottom: 20px; }
-        .stat-item { flex: 1; background: #0f172a; padding: 15px; border-radius: 8px; text-align: center; }
-        .stat-val { display: block; font-size: 24px; font-weight: bold; color: var(--accent); }
-        .console { background: #000; height: 400px; overflow-y: auto; padding: 15px; font-family: monospace; font-size: 13px; border-radius: 8px; border: 1px solid #334155; }
-        .json-box { margin-top: 20px; background: #0f172a; padding: 20px; border-radius: 8px; border-left: 4px solid var(--accent); white-space: pre-wrap; color: #38bdf8; }
-        button { background: var(--accent); color: #000; border: none; padding: 15px; width: 100%; border-radius: 8px; font-weight: 800; cursor: pointer; transition: 0.3s; }
-        button:hover { opacity: 0.8; transform: scale(0.98); }
+        body { font-family: 'Inter', sans-serif; background: #020617; color: #f8fafc; padding: 20px; }
+        .hud { display: flex; gap: 15px; margin-bottom: 20px; }
+        .hud-item { flex: 1; background: #1e293b; padding: 15px; border-radius: 8px; border: 1px solid #334155; text-align: center; }
+        .hud-val { display: block; font-size: 22px; font-weight: bold; color: #10b981; }
+        .main { display: grid; grid-template-columns: 1fr 350px; gap: 20px; }
+        .card { background: #1e293b; padding: 20px; border-radius: 12px; border: 1px solid #334155; }
+        textarea, select, input { width: 100%; background: #0f172a; color: #fff; border: 1px solid #334155; padding: 10px; margin: 10px 0; border-radius: 6px; }
+        button { background: #2563eb; color: white; border: none; padding: 12px; border-radius: 6px; width: 100%; font-weight: bold; cursor: pointer; }
+        .console { background: #000; height: 350px; overflow-y: auto; padding: 10px; font-family: monospace; font-size: 12px; border-radius: 8px; border: 1px solid #334155; }
+        .result-card { background: #0f172a; padding: 15px; border-radius: 8px; margin-top: 15px; border-left: 4px solid #10b981; }
     </style>
 </head>
 <body>
-    <div class="dashboard">
-        <div class="main">
-            <div class="stat-grid">
-                <div class="stat-item">CPU LOAD <span class="stat-val" id="cpu-val">0%</span></div>
-                <div class="stat-item">RAM USED <span class="stat-val" id="ram-val">0GB</span></div>
-                <div class="stat-item">RESOURCES <span class="stat-val" id="status-val">IDLE</span></div>
-            </div>
-            <div class="card">
-                <textarea id="prompt" rows="3" placeholder="Fields to extract...">Extract: LC_Number, Expiry_Date, Amount, Currency, Beneficiary</textarea>
-                <input type="file" id="fileInput">
-                <button onclick="runScan()">INITIATE SUPER-POWER SCAN</button>
-                <div id="results-area"></div>
-            </div>
-        </div>
-        <div class="side">
-            <div class="console" id="console"></div>
-        </div>
+    <div class="hud">
+        <div class="hud-item">CPU <span id="cpu-v" class="hud-val">0%</span></div>
+        <div class="hud-item">RAM <span id="ram-v" class="hud-val">0GB</span></div>
+        <div class="hud-item">STATUS <span id="status-v" class="hud-val">IDLE</span></div>
     </div>
-
+    <div class="main">
+        <div class="card">
+            <select id="mode">
+                <option value="">Auto-Intelligence</option>
+                <option value="speed">Force: Turbo (q2_K)</option>
+                <option value="precision">Force: Precision (q8_0)</option>
+            </select>
+            <textarea id="prompt" rows="3">Extract Invoice Number, Date, Amount, Currency, Beneficiary</textarea>
+            <input type="file" id="fileIn">
+            <button onclick="run()">START PIPELINE</button>
+            <div id="results"></div>
+        </div>
+        <div class="console" id="log"></div>
+    </div>
     <script>
-        const ws = new WebSocket(`ws://${window.location.host}/ws`);
-        const consoleEl = document.getElementById('console');
-        
+        const ws = new WebSocket(`ws://${location.host}/ws`);
         ws.onmessage = (e) => {
-            const res = JSON.parse(e.data);
-            if (res.type === 'stats') {
-                document.getElementById('cpu-val').innerText = res.data.cpu + '%';
-                document.getElementById('ram-val').innerText = res.data.ram_gb + 'GB';
+            const r = JSON.parse(e.data);
+            if(r.type === 'stats') {
+                document.getElementById('cpu-v').innerText = r.data.cpu + '%';
+                document.getElementById('ram-v').innerText = r.data.ram_gb + 'GB';
             } else {
-                const div = document.createElement('div');
-                div.innerHTML = `<span style="color:#64748b">[${res.time}]</span> ${res.msg}`;
-                consoleEl.appendChild(div);
-                consoleEl.scrollTop = consoleEl.scrollHeight;
+                const l = document.getElementById('log');
+                l.innerHTML += `<div><small>[${r.time}]</small> ${r.msg}</div>`;
+                l.scrollTop = l.scrollHeight;
             }
         };
-
-        async function runScan() {
-            const file = document.getElementById('fileInput').files[0];
-            const area = document.getElementById('results-area');
-            area.innerHTML = '';
-            document.getElementById('status-val').innerText = "SCANNING";
-
+        async function run() {
+            const f = document.getElementById('fileIn').files[0];
             const fd = new FormData();
-            fd.append('file', file);
+            fd.append('file', f);
             fd.append('prompt', document.getElementById('prompt').value);
-
+            fd.append('mode', document.getElementById('mode').value);
+            document.getElementById('status-val').innerText = "BUSY";
             const res = await fetch('/scan', { method: 'POST', body: fd });
-            const json = await res.json();
-            
-            json.results.forEach(r => {
-                const box = document.createElement('div');
-                box.className = 'json-box';
-                box.innerHTML = `<strong>PAGE ${r.page}</strong><br>${JSON.stringify(r.data, null, 4)}`;
-                area.appendChild(box);
-            });
-            document.getElementById('status-val').innerText = "IDLE";
+            const data = await res.json();
+            document.getElementById('results').innerHTML = data.results.map(r => `
+                <div class="result-card"><b>Page ${r.page}</b> (${r.perf}s)<pre>${JSON.stringify(r.data, null, 2)}</pre></div>
+            `).join('');
+            document.getElementById('status-v').innerText = "IDLE";
         }
     </script>
 </body>
