--- a/index.html
+++ b/index.html
@@ -4,49 +4,39 @@
     <meta charset="UTF-8">
     <title>LogiTrace AI Command Center</title>
     <style>
-        :root { --primary: #2563eb; --accent: #10b981; --error: #ef4444; --bg: #020617; --card: #1e293b; }
+        :root { --primary: #3b82f6; --accent: #10b981; --error: #ef4444; --bg: #020617; --card: #1e293b; }
         body { font-family: 'Inter', sans-serif; background: var(--bg); color: #f8fafc; padding: 20px; margin:0; }
         .hud { display: flex; gap: 15px; margin-bottom: 20px; }
         .hud-item { flex: 1; background: var(--card); padding: 15px; border-radius: 12px; border: 1px solid #334155; text-align: center; }
-        .hud-val { display: block; font-size: 24px; font-weight: 800; color: var(--accent); }
-        .main { display: grid; grid-template-columns: 1fr 400px; gap: 20px; max-width: 1400px; margin: 0 auto; }
-        .card { background: var(--card); padding: 20px; border-radius: 12px; border: 1px solid #334155; margin-bottom: 20px; }
-        textarea, select, input { width: 100%; background: #0f172a; color: #fff; border: 1px solid #334155; padding: 12px; margin: 10px 0; border-radius: 6px; box-sizing: border-box; }
-        button { background: var(--primary); color: white; border: none; padding: 12px; border-radius: 6px; width: 100%; font-weight: bold; cursor: pointer; transition: 0.2s; }
-        button:hover { opacity: 0.9; transform: translateY(-1px); }
-        .console { background: #000; height: 500px; overflow-y: auto; padding: 15px; font-family: 'Fira Code', monospace; font-size: 12px; border-radius: 12px; border: 2px solid #334155; }
-        .log-entry { margin-bottom: 4px; border-bottom: 1px solid #111; padding-bottom: 2px; }
-        .result-item { background: #0f172a; padding: 15px; border-radius: 8px; margin-top: 15px; border-left: 4px solid var(--accent); }
-        pre { white-space: pre-wrap; font-size: 13px; color: #38bdf8; }
+        .hud-val { display: block; font-size: 26px; font-weight: 800; color: var(--accent); }
+        .main { display: grid; grid-template-columns: 1fr 450px; gap: 20px; max-width: 1400px; margin: 0 auto; }
+        .card { background: var(--card); padding: 20px; border-radius: 12px; border: 1px solid #334155; }
+        textarea, input { width: 100%; background: #0f172a; color: #fff; border: 1px solid #334155; padding: 12px; margin: 10px 0; border-radius: 6px; box-sizing: border-box; }
+        button { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 6px; width: 100%; font-weight: bold; cursor: pointer; transition: 0.2s; font-size: 14px; }
+        button:hover { background: #2563eb; }
+        button:disabled { background: #475569; }
+        .console { background: #000; height: 550px; overflow-y: auto; padding: 15px; font-family: 'Fira Code', monospace; font-size: 12px; border-radius: 12px; border: 2px solid #334155; }
+        .log-entry { margin-bottom: 4px; padding-bottom: 2px; }
+        .result-item { background: #0f172a; padding: 20px; border-radius: 8px; margin-top: 15px; border-left: 5px solid var(--accent); }
+        pre { white-space: pre-wrap; font-size: 13px; color: #38bdf8; margin: 0; }
     </style>
 </head>
 <body>
     <div class="hud">
-        <div class="hud-item">CPU <span id="cpu-v" class="hud-val">0%</span></div>
-        <div class="hud-item">RAM <span id="ram-v" class="hud-val">0GB</span></div>
-        <div class="hud-item">ENGINE <span id="ollama-v" class="hud-val" style="color:var(--error)">OFFLINE</span></div>
+        <div class="hud-item">CPU LOAD <span id="cpu-v" class="hud-val">0%</span></div>
+        <div class="hud-item">RAM USED <span id="ram-v" class="hud-val">0GB</span></div>
+        <div class="hud-item">MODEL <span class="hud-val" style="color:#60a5fa">QWEN 2.5VL</span></div>
     </div>
     <div class="main">
-        <div>
-            <div class="card" id="puller-ui" style="display:none; border-color:var(--error)">
-                <h3 style="margin-top:0; color:var(--error)">NO VISION MODELS DETECTED</h3>
-                <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; gap:10px;">
-                    <button onclick="pull('qwen2.5-vl:7b-instruct-q2_K')" style="background:#475569">PULL 2K</button>
-                    <button onclick="pull('qwen2.5-vl:7b-instruct-q4_K_M')" style="background:#475569">PULL 4K</button>
-                    <button onclick="pull('qwen2.5-vl:7b-instruct-q8_0')" style="background:#475569">PULL 8K</button>
-                </div>
-            </div>
-            <div class="card">
-                <label>Select Vision Model:</label>
-                <select id="mode"><option value="">Sensing...</option></select>
-                <textarea id="prompt">Extract: LC_Number, Expiry_Date, Total_Amount, Currency, Beneficiary</textarea>
-                <input type="file" id="fileIn">
-                <button id="runBtn" onclick="run()">EXECUTE PIPELINE</button>
-                <div id="results"></div>
-            </div>
+        <div class="card">
+            <h3>EXTRACTION PIPELINE</h3>
+            <textarea id="prompt">Extract: LC_Number, Date, Total_Amount, Currency, Beneficiary Name, Shipping Port, Expiry Date</textarea>
+            <input type="file" id="fileIn">
+            <button id="runBtn" onclick="run()">INITIATE 16-CORE SCAN</button>
+            <div id="results"></div>
         </div>
         <div class="card">
-            <h3 style="margin-top:0">DIAGNOSTIC_LOG</h3>
+            <h3>DIAGNOSTIC_LOG</h3>
             <div class="console" id="log"></div>
         </div>
     </div>
@@ -58,38 +48,33 @@
                 document.getElementById('cpu-v').innerText = r.data.cpu + '%';
                 document.getElementById('ram-v').innerText = r.data.ram_gb + 'GB';
             } else {
-                if(r.msg.includes("Sensed")) {
-                    document.getElementById('ollama-v').innerText = "ONLINE";
-                    document.getElementById('ollama-v').style.color = "var(--accent)";
-                    const sel = document.getElementById('mode');
-                    if(r.data && r.data.models.length > 0) {
-                        document.getElementById('puller-ui').style.display = 'none';
-                        sel.innerHTML = r.data.models.map(m => `<option value="${m.name}">${m.name} (${m.size})</option>`).join('');
-                    } else { document.getElementById('puller-ui').style.display = 'block'; }
-                }
                 const l = document.getElementById('log');
-                l.innerHTML += `<div class="log-entry"><small>[${r.time}]</small> <span style="color:${r.status === 'success' ? '#10b981' : (r.status === 'error' ? '#ef4444' : '#38bdf8')}">${r.msg}</span></div>`;
+                const color = r.status === 'success' ? '#10b981' : (r.status === 'error' ? '#ef4444' : '#38bdf8');
+                l.innerHTML += `<div class="log-entry"><small>[${r.time}]</small> <span style="color:${color}">${r.msg}</span></div>`;
                 l.scrollTop = l.scrollHeight;
             }
         };
-        async function pull(name) {
-            const fd = new FormData(); fd.append('model_name', name);
-            await fetch('/pull', { method:'POST', body: fd });
-        }
         async function run() {
             const f = document.getElementById('fileIn').files[0];
             const btn = document.getElementById('runBtn');
-            if(!f) return alert("Select file");
+            if(!f) return alert("Select a file first.");
             btn.disabled = true;
             const fd = new FormData();
-            fd.append('file', f); fd.append('prompt', document.getElementById('prompt').value);
-            fd.append('mode', document.getElementById('mode').value);
-            const res = await fetch('/scan', { method: 'POST', body: fd });
-            const data = await res.json();
-            document.getElementById('results').innerHTML = data.results.map(r => `
-                <div class="result-item"><b>PAGE ${r.page}</b> (${r.perf}s)<pre>${JSON.stringify(r.data, null, 2)}</pre></div>
-            `).join('');
-            btn.disabled = false;
+            fd.append('file', f);
+            fd.append('prompt', document.getElementById('prompt').value);
+            try {
+                const res = await fetch('/scan', { method: 'POST', body: fd });
+                const data = await res.json();
+                document.getElementById('results').innerHTML = data.results.map(r => `
+                    <div class="result-item">
+                        <div style="display:flex; justify-content:space-between; margin-bottom:10px; font-size:12px; color:#94a3b8;">
+                            <b>PAGE ${r.page}</b> <span>TIME: ${r.perf}s</span>
+                        </div>
+                        <pre>${JSON.stringify(r.data, null, 2)}</pre>
+                    </div>
+                `).join('');
+            } catch (e) { alert("Scan failure."); }
+            finally { btn.disabled = false; }
         }
     </script>
 </body>
