--- a/index.html
+++ b/index.html
@@ -2,37 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LogiTrace AI Command Center</title>
+    <title>LogiTrace AI | Dynamic Precision</title>
     <style>
         :root { --primary: #3b82f6; --accent: #10b981; --error: #ef4444; --bg: #020617; --card: #1e293b; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg); color: #f8fafc; padding: 20px; margin:0; }
+        body { font-family: 'Inter', sans-serif; background: var(--bg); color: #f8fafc; padding: 20px; }
         .hud { display: flex; gap: 15px; margin-bottom: 20px; }
         .hud-item { flex: 1; background: var(--card); padding: 15px; border-radius: 12px; border: 1px solid #334155; text-align: center; }
         .hud-val { display: block; font-size: 26px; font-weight: 800; color: var(--accent); }
         .main { display: grid; grid-template-columns: 1fr 450px; gap: 20px; max-width: 1400px; margin: 0 auto; }
-        .card { background: var(--card); padding: 20px; border-radius: 12px; border: 1px solid #334155; }
-        textarea, input { width: 100%; background: #0f172a; color: #fff; border: 1px solid #334155; padding: 12px; margin: 10px 0; border-radius: 6px; box-sizing: border-box; }
-        button { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 6px; width: 100%; font-weight: bold; cursor: pointer; transition: 0.2s; font-size: 14px; }
-        button:hover { background: #2563eb; }
-        button:disabled { background: #475569; }
-        .console { background: #000; height: 550px; overflow-y: auto; padding: 15px; font-family: 'Fira Code', monospace; font-size: 12px; border-radius: 12px; border: 2px solid #334155; }
-        .log-entry { margin-bottom: 4px; padding-bottom: 2px; }
-        .result-item { background: #0f172a; padding: 20px; border-radius: 8px; margin-top: 15px; border-left: 5px solid var(--accent); }
-        pre { white-space: pre-wrap; font-size: 13px; color: #38bdf8; margin: 0; }
+        .card { background: var(--card); padding: 25px; border-radius: 16px; border: 1px solid #334155; }
+        select, textarea, input { width: 100%; background: #0f172a; color: #fff; border: 1px solid #334155; padding: 12px; margin: 10px 0; border-radius: 8px; box-sizing: border-box; }
+        .btn-group { display: flex; gap: 10px; margin-top: 10px; }
+        button { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 8px; width: 100%; font-weight: bold; cursor: pointer; transition: 0.2s; }
+        button:hover { filter: brightness(1.2); }
+        .console { background: #000; height: 500px; overflow-y: auto; padding: 15px; font-family: monospace; font-size: 12px; border-radius: 12px; border: 1px solid #334155; }
+        .result-item { background: #0f172a; padding: 15px; border-radius: 8px; margin-top: 15px; border-left: 5px solid var(--accent); }
+        pre { white-space: pre-wrap; font-size: 13px; color: #38bdf8; }
     </style>
 </head>
 <body>
     <div class="hud">
         <div class="hud-item">CPU LOAD <span id="cpu-v" class="hud-val">0%</span></div>
-        <div class="hud-item">RAM USED <span id="ram-v" class="hud-val">0GB</span></div>
-        <div class="hud-item">MODEL <span class="hud-val" style="color:#60a5fa">QWEN 2.5VL</span></div>
+        <div class="hud-item">RAM <span id="ram-v" class="hud-val">0GB</span></div>
+        <div class="hud-item">128GB STATUS <span class="hud-val" style="color:#60a5fa">OPTIMIZED</span></div>
     </div>
     <div class="main">
         <div class="card">
-            <h3>EXTRACTION PIPELINE</h3>
-            <textarea id="prompt">Extract: LC_Number, Date, Total_Amount, Currency, Beneficiary Name, Shipping Port, Expiry Date</textarea>
+            <label>Precision Engine:</label>
+            <select id="mode">
+                <option value="speed">Turbo Mode (q4_K_M) - FAST</option>
+                <option value="high">Precision Mode (q8_0) - ACCURATE</option>
+            </select>
+            <textarea id="prompt">Extract: LC_Number, Date, Total_Amount, Currency, Beneficiary</textarea>
             <input type="file" id="fileIn">
-            <button id="runBtn" onclick="run()">INITIATE 16-CORE SCAN</button>
+            <button id="runBtn" onclick="run()">INITIATE EXTRACTION</button>
             <div id="results"></div>
         </div>
         <div class="card">
@@ -49,32 +52,25 @@
                 document.getElementById('ram-v').innerText = r.data.ram_gb + 'GB';
             } else {
                 const l = document.getElementById('log');
-                const color = r.status === 'success' ? '#10b981' : (r.status === 'error' ? '#ef4444' : '#38bdf8');
-                l.innerHTML += `<div class="log-entry"><small>[${r.time}]</small> <span style="color:${color}">${r.msg}</span></div>`;
+                l.innerHTML += `<div><small>[${r.time}]</small> <span style="${r.status==='success'?'color:#10b981':''}"> ${r.msg}</span></div>`;
                 l.scrollTop = l.scrollHeight;
             }
         };
         async function run() {
             const f = document.getElementById('fileIn').files[0];
             const btn = document.getElementById('runBtn');
-            if(!f) return alert("Select a file first.");
+            if(!f) return alert("Upload file");
             btn.disabled = true;
             const fd = new FormData();
             fd.append('file', f);
             fd.append('prompt', document.getElementById('prompt').value);
-            try {
-                const res = await fetch('/scan', { method: 'POST', body: fd });
-                const data = await res.json();
-                document.getElementById('results').innerHTML = data.results.map(r => `
-                    <div class="result-item">
-                        <div style="display:flex; justify-content:space-between; margin-bottom:10px; font-size:12px; color:#94a3b8;">
-                            <b>PAGE ${r.page}</b> <span>TIME: ${r.perf}s</span>
-                        </div>
-                        <pre>${JSON.stringify(r.data, null, 2)}</pre>
-                    </div>
-                `).join('');
-            } catch (e) { alert("Scan failure."); }
-            finally { btn.disabled = false; }
+            fd.append('mode', document.getElementById('mode').value);
+            const res = await fetch('/scan', { method: 'POST', body: fd });
+            const data = await res.json();
+            document.getElementById('results').innerHTML = data.results.map(r => `
+                <div class="result-item"><b>PAGE ${r.page}</b> (${r.perf}s)<pre>${JSON.stringify(r.data, null, 2)}</pre></div>
+            `).join('');
+            btn.disabled = false;
         }
     </script>
 </body>
